# ai-changelog

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  SECRETS.md  alembic.ini  fly.toml  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_users.py
src/changelog/: auth.py  config.py  dashboard.py  health.py  main.py  rate_limit.py
src/changelog/db/: __init__.py  models.py
src/changelog/github/: app.py
src/changelog/llm/: formatter.py  provider.py
src/changelog/webhooks/: github.py
src/changelog/workers/: background.py  celery_app.py
templates/: email-waitlist.html
tests/: test_engine.py  test_health.py  test_webhook_e2e.py
